[project]
name = "map-tool-api"
version = "0.1.0"
description = "API for my thesis app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "bcrypt>=5.0.0",
    "certifi==2025.8.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "dnspython==2.8.0",
    "dotenv>=0.9.9",
    "email-validator==2.3.0",
    "fastapi-cli==0.0.11",
    "fastapi-cloud-cli==0.1.5",
    "fastapi[standard]==0.116.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "passlib>=1.7.4",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pyjwt>=2.10.1",
    "pymongo==4.15.1",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "rich==14.1.0",
    "rich-toolkit==0.15.1",
    "rignore==0.6.4",
    "sentry-sdk==2.38.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "starlette==0.48.0",
    "typer==0.17.4",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
]
